# steam_archive

./: .env.template  README.md  docker-compose.yml  pyproject.toml
data/: survey_data_combined.json
scripts/: create_db.sh
sql/: schema.sql  user.sql  views.sql
sql/routines/: get_jsonb_value.sql  upsert_cpu_count.sql  upsert_gpu_config.sql  upsert_hw_survey.sql  upsert_os_version.sql  upsert_ram_config.sql
steam_archive/: main.py
steam_archive/cli/: __init__.py  db.py  models.py  util.py
steam_archive/cli/commands/: __init__.py  data.py  init.py  seed.py
steam_archive/config/: db.py  env.py
steam_archive/db/: cli.py
steam_archive/db/commands/: init.py  seed.py
steam_archive/util/: data.py  db.py
