[tool.poetry]
name = "steam-archive"
version = "0.1.0"
description = ""
authors = ["Rocco Ciccone <rocco.ciccone@proton.me>"]
readme = "README.md"
packages = [{include = "steam_archive"}]

[tool.poetry.dependencies]
python = "^3.10"
psycopg = {extras = ["binary"], version = "^3.1.9"}
pydantic = {extras = ["dotenv"], version = "^1.10.9"}
sqlalchemy = "^2.0.16"
typer = {extras = ["all"], version = "^0.9.0"}


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
